edit RestFull mapping Client Controller